# simple-backup

./: .gitignore  Cargo.toml  PROJECT_PLAN.md  README.md
docs/: processes.md  references.md  todo.md
src/: lib.rs  main.rs  system_state.rs  user_profile.rs
src/api/: profile.rs  state.rs
src/backup/: aws.rs  backup.rs  local.rs  mod.rs  util.rs
src/db/: backup.rs  mod.rs  profile.rs  state.rs  util.rs
src/manager/: file.rs  mod.rs  state.rs  system.rs
src/ui/: add.rs  alert.rs  app.rs  helpers.rs  mod.rs  profile.rs  state.rs  style.css
