[package]
name = "simple-backup"
version = "0.1.0"
authors = ["MeanderingProgrammer <meanderingprogrammer@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
chrono = "0.4.23"
dioxus = "0.3.1"
dioxus-desktop = "0.3.0"
dioxus-router = "0.3.0"
filetime = "0.2.19"
glob = "0.3.1"
itertools = "0.10.5"
native-dialog = "0.6.3"
uuid = { version = "1.2.2", features = ["v4"] }
